# mulle-concurrent

./: .gitignore  .touch  .travis.yml  CMakeDependencies.txt  CMakeLists.txt  CMakeSourcesAndHeaders.txt  LICENSE  README.md  RELEASENOTES.md  build.sh  clib.json  mulle-concurrent.sublime-project  package.json
.bootstrap/: .gitattributes  MULLE_REPOSITORIES  embedded_repositories  repositories
.github/workflows/: mulle-sde-ci.yml  semgrep.yml
.mulle-env/etc/: optionaltool
.mulle-env/share/: environment-aux.sh  environment-extension.sh  environment-global.sh  environment-os-darwin.sh  environment-project.sh  environment-share.sh  environment.sh
.mulle-sde/share/: extension
.mulle-sde/share/ignore.d/: 00-directories--none  20-generated--none
.mulle-sde/share/match.d/: 40-test--sourcefile  50-source--standalone-sources
.mulle-sourcetree/etc/: config
.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh
.mulle/etc/sourcetree/: config
.mulle/share/env/: environment-extension.sh  environment-plugin.sh  environment-project.sh  optionaltool  tool  tool-extension
.mulle/share/sde/: extension
.mulle/share/sourcetree/: config
.travis.d/: script
cmake/: DependenciesAndLibraries.cmake  Headers.cmake  HeadersAndSources.cmake  _Dependencies.cmake  _Headers.cmake  _Libraries.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Resources.cmake  _Sources.cmake
cmake/share/: CMakeTweaks.cmake  CompilerDetection.cmake  CompilerFlags.cmake  Environment.cmake  Executable.cmake  FinalOutput.cmake  Framework.cmake  IDESupport.cmake  InstallExecutable.cmake  InstallLibrary.cmake  Library.cmake  LinkAllSymbols.cmake  LinkManifestC.cmake  Motd.cmake  PostExecutable.cmake  PostFiles.cmake  PostLibrary.cmake  PreExecutable.cmake  PreFiles.cmake  PreLibrary.cmake  README.md  Standalone.cmake  StandaloneC.cmake  StartupC.cmake  UnwantedWarnings.cmake
cola/: api.md.bud  data-structures.md.bud  description.md.bud  properties.plist
dox/: API_HASHMAP.md  API_POINTERARRAY.md  BUILD.md
mulle-concurrent.xcodeproj/: project.pbxproj
mulle-project/: formula-info.sh  generate-formula.sh
src/: _dependencies.h  _mulle-concurrent-dependencies.h  _mulle-concurrent-include-private.h  _mulle-concurrent-include.h  dependencies.h  include-private.h  include.h  mulle-concurrent-standalone.c  mulle-concurrent-types.h  mulle-concurrent.h  mulle_concurrent.h  mulle_concurrent_standalone.c  mulle_concurrent_types.h  mulle_standalone_concurrent.c  mulle_standalone_concurrent.h
src/generic/: include.h
src/hashmap/: mulle-concurrent-hashmap.c  mulle-concurrent-hashmap.h  mulle_concurrent_hashmap.c  mulle_concurrent_hashmap.h
src/pointerarray/: mulle-concurrent-pointerarray.c  mulle-concurrent-pointerarray.h  mulle_concurrent_pointerarray.c  mulle_concurrent_pointerarray.h
src/reflect/: _mulle-concurrent-include-private.h  _mulle-concurrent-include.h  _mulle-concurrent-provide.h  _mulle-concurrent-versioncheck.h
templates/: README.md.scion  _wrapper.md.scion
templates/dox/: BUILD.md.scion
test/: build-test.sh  include.h  run-test.sh
test/.mulle-env/etc/: environment-global.sh
test/array/: empty.c  empty.stdout  example.c  example.stdout  pointerarray.c  simple.c
test/hashmap/: example.c  hashmap.c  othersimple.c
tests/: build-for-test.sh  build-test.sh  run-test.sh
tests/array/: empty.c  example.c  pointerarray.c  simple.c
tests/hashmap/: example.c  example.stdout  hashmap.c  othersimple.c  othersimple.stdout
tests/pointerarray/: pointerarray.c  simple.c  simple.stdout
(+9 files in other folders)
